cbr-frontend/kustomize/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbr-frontend
spec:
  tls:
  - hosts:
    - staging-grabber.homeline.kg
    secretName: cbr-staging-tls
  rules:
  - host: staging-grabber.homeline.kg
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cbr-frontend
            port:
              number: 80
